--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,16 +6,50 @@
   margin: auto;
 }
 
+.itsbody {
+
+  max-width: 70%;
+
+  margin: auto;
+}
+.itsform {
+
+  margin: 1%;
+}
+
 .form {
   position: relative;
   z-index: 1;
   background: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
+  max-width: 22%;
+  margin: 1% 2%;
+  padding: 35px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  float: left;
 }
+
+
+.response {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 100%;
+  margin: 0 auto 100px;
+  padding: 2%;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  clear:both;
+  margin: 1% auto;
+}
+
+
+
+
+
+
+
+
 
 .form input {
   font-family: "Roboto", sans-serif;
