--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= 'ELASTIC API'   
+    link(rel='stylesheet' href='/stylesheets/style.css')
   body
     block content
     
