working on string replace

--- a/views/index.jade
+++ b/views/index.jade
@@ -41,7 +41,7 @@ block content
       else if message_result
         h3  Hecho!  
         script(type="text/javascript").
-         var stringindices= #{message_result};
+         var stringindices= !{message_result};
          // var resback = stringindices.split('%');
           //var aaa = message_result;
           //var stringIndices =JSON.parse('!{message_result}');
