--- a/views/index.jade
+++ b/views/index.jade
@@ -56,7 +56,7 @@ block content
       span 
         p(data-qa='message' style='color:red') #{message_error}
       span 
-        p(data-qa='message' style="word-wrap: break-word; white-space: pre-wrap; color:blue ") #{message_result}
+        p(data-qa='message' style="word-wrap: break-word; white-space: pre-wrap; color:blue;") #{message_result}
       span 
         p(data-qa='message' style='color:blue') #{message_mock} 
 
