--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block content
 
           input#inputPort(data-qa='inputPort' type='text' name='inputPort' value='9200')
 
-          input#inputDir(data-qa='inputDir' type='text' name='inputDir' value='')
+          input#inputDir(data-qa='inputDir' type='text' name='inputDir' value='/_cat/')
 
           button#get_api(data-qa='submit' type='submit') GET API
       .form
